(v2) Texture packer: handle missing files or bigger files.